<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <!-- Home Fragment -->
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.advancedandroidapp.ui.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_map"
            app:destination="@id/mapFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_home_to_profile"
            app:destination="@id/profileFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <!-- Map Fragment -->
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.advancedandroidapp.ui.fragments.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_map_to_locationDetail"
            app:destination="@id/locationDetailFragment" />
    </fragment>

    <!-- Profile Fragment -->
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.advancedandroidapp.ui.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_to_settings"
            app:destination="@id/settingsFragment" />
    </fragment>

    <!-- Location Detail Fragment -->
    <fragment
        android:id="@+id/locationDetailFragment"
        android:name="com.example.advancedandroidapp.ui.fragments.LocationDetailFragment"
        android:label="@string/location_detail"
        tools:layout="@layout/fragment_location_detail">
        <argument
            android:name="locationId"
            app:argType="string" />
    </fragment>

    <!-- Settings Fragment -->
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.advancedandroidapp.ui.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <!-- Authentication Fragment -->
    <fragment
        android:id="@+id/authFragment"
        android:name="com.example.advancedandroidapp.ui.fragments.AuthFragment"
        android:label="@string/auth"
        tools:layout="@layout/fragment_auth">
        <action
            android:id="@+id/action_auth_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>
